[gd_scene load_steps=6 format=3 uid="uid://dh0xqsvmtokbh"]

[ext_resource type="Script" uid="uid://b7d6wfi6urnkk" path="res://scripts/menu/menu_pause.gd" id="1_etnfi"]
[ext_resource type="FontFile" uid="uid://btdvbprakodnv" path="res://assets/font/GlitchGoblin.ttf" id="1_nov15"]
[ext_resource type="Theme" uid="uid://bkyyhibmxbrq8" path="res://assets/UITheme.tres" id="3_dmujr"]
[ext_resource type="PackedScene" uid="uid://0fccgu7f77gg" path="res://scenes/menu/SettingsMenu.tscn" id="3_komsw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_komsw"]
bg_color = Color(0.377919, 0.377919, 0.377919, 1)

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_dmujr")
script = ExtResource("1_etnfi")

[node name="BackgroundBlur" type="Panel" parent="."]
self_modulate = Color(1, 1, 1, 0.694118)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_komsw")

[node name="ScreenController" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SettingsScreen" type="ReferenceRect" parent="ScreenController"]
layout_mode = 0
offset_top = 658.0
offset_right = 1152.0
offset_bottom = 1306.0
border_width = 3.0

[node name="Settings" parent="ScreenController/SettingsScreen" instance=ExtResource("3_komsw")]
layout_mode = 1

[node name="PauseScreen" type="ReferenceRect" parent="ScreenController"]
layout_mode = 2
offset_right = 1152.0
offset_bottom = 648.0
border_width = 3.0

[node name="BoxContainer" type="BoxContainer" parent="ScreenController/PauseScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
vertical = true

[node name="GamePausedLabel" type="Label" parent="ScreenController/PauseScreen/BoxContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = -5
theme_override_constants/shadow_offset_y = 5
theme_override_fonts/font = ExtResource("1_nov15")
theme_override_font_sizes/font_size = 70
text = "Game PAUSED"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MenuButtonPanel" type="Panel" parent="ScreenController/PauseScreen/BoxContainer"]
custom_minimum_size = Vector2(250, 250)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="ScreenController/PauseScreen/BoxContainer/MenuButtonPanel"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
offset_left = 25.0
offset_top = 25.0
offset_right = 225.0
offset_bottom = 225.0

[node name="Resume" type="Button" parent="ScreenController/PauseScreen/BoxContainer/MenuButtonPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_default_cursor_shape = 2
theme_type_variation = &"SettingButtons"
text = "Resume Game"

[node name="Settings" type="Button" parent="ScreenController/PauseScreen/BoxContainer/MenuButtonPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_default_cursor_shape = 2
theme_type_variation = &"SettingButtons"
text = "Settings
"

[node name="Exit" type="Button" parent="ScreenController/PauseScreen/BoxContainer/MenuButtonPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_default_cursor_shape = 2
theme_type_variation = &"SettingButtons"
text = "Leave Match"

[connection signal="back_button_pressed" from="ScreenController/SettingsScreen/Settings" to="." method="_on_settings_back_button_pressed"]
[connection signal="pressed" from="ScreenController/PauseScreen/BoxContainer/MenuButtonPanel/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="ScreenController/PauseScreen/BoxContainer/MenuButtonPanel/VBoxContainer/Settings" to="." method="_on_options_pressed"]
[connection signal="pressed" from="ScreenController/PauseScreen/BoxContainer/MenuButtonPanel/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
